# MCPBlender

./: .gitattributes  .gitignore  LICENSE  README.md  mcp_config_example.json  pyproject.toml  requirements.txt
blender_addon/: __init__.py  executor.py  handlers.py  run_phase_4.py  server.py
blender_ai_mcp/: __init__.py
blender_ai_mcp/server/: __init__.py  bridge.py  main.py
docs/: AI_README.md  README.md  SETUP.md  TOOLS.md
server/: __init__.py  bridge.py  main.py
server/tools/: __init__.py  animation.py  asset_pipeline.py  camera.py  common.py  geometry_nodes.py  hard_surface_modeling.py  io.py  lighting.py  material_pro.py  materials.py  modeling_core.py  modifiers.py  objects.py  quality_validation.py  reference_modeling.py  rendering.py  scene.py  scripting.py  uv.py
server/utils/: __init__.py  serializers.py  validators.py
tests/: conftest.py  test_all_tool_categories.py  test_bridge.py  test_core_utilities.py  test_errors.py  test_materials.py  test_objects.py  test_scene.py
